Se cambia la configuración del mailer para usar brevo. Se agrega un filtro para eliminar el warning de cambio de versión en consola.

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ DEBUG=TRUE
 BASENAME=/
 #BACKEND_URL=
 
-SMTP_APP_PASSWORD=""
-SMTP_USERNAME=
-SMTP_HOST=smtp.gmail.com
+SMTP_USERNAME=8159f8001@smtp-brevo.com
+SMTP_APP_PASSWORD=zgOvkn6KZbhVstJI
+SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
-RECIEVERS_EMAIL=""
+RECIEVERS_EMAIL="correo@correo.com"
